Bug 1831298 - Don't apply spurious scaling to the synthetic-bold advance adjustment when shaping text. r=dholbert,emilio

Differential Revision: https://phabricator.services.mozilla.com/D177151